[package]
name = "musualiser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.11.0"
rodio = "0.17.3"
rustfft = "6.1.0"
rfd = "0.12.1"
glow = "0.13.0"
glutin = "0.31.1"
imgui-winit-support = { version = "0.11.0", path = "./imgui-winit-support" }
imgui-glow-renderer = { version = "0.11.0", path = "./imgui-glow-renderer" }
glutin-winit = "0.4.2"
raw-window-handle = "0.5.0"